fix(radiosfield): better overlap prevention
when labels needs several lines to show

--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,7 @@ form.formcreator_form {
    cursor: pointer;
    padding-left: 22px;
    position: relative;
-   display: block;
+   display: inline-block;
    height: 26px;
 }
 .formcreator_radios input[type = radio] + label:before,
